<resources>
    <string name="app_name">SudokuForProgrammer</string>
    <string name="app_saved_game">saved_game</string>
    <string name="app_highest_score">highest_score</string>
    <string name="highest_score_date">highest_score_date</string>

    <string name="start_new_game">new</string>
    <string name="continue_game">continue</string>

    <string name="app_title_1">&lt;Programer</string>
    <string name="app_title_2">Sudoku\/&gt;</string>

    <string name="quote_content_default">"All or none. "</string>
    <string name="quote_author_default">by Game Creator</string>

    <string name="game_quit">:wq</string>
    <string name="game_timer_state_shown">shown</string>
    <string name="game_timer_state_hided">hided</string>

    <string name="history_title">&lt;highest-score&gt;</string>
    <string name="history_title_end">&lt;\/highest-score&gt;</string>

    <string name="history_date">&lt;date&gt;</string>
    <string name="history_date_end">&lt;\/date&gt;</string>

    <string name="history_creator">&lt;creator&gt;</string>
    <string name="history_creator_end">&lt;\/creator&gt;</string>

</resources>
